// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 61,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.815,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 140,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 49,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 280,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.555,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 17,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.535,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 37,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 28,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 2.3749999999999996,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evasionPct": 16.8,
  "extraAttackChancePct": 56,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 23,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 112,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.595,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 5,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 10,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 46,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.801,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 0,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 26,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 0,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "a6cd8e20b351dd337785ac94678efcb1eb506387",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "87d7f05003608fcace517aa68902f62dd9f76c4f",
    "outcome": "win",
    "playerHp": 710,
    "playerMp": 227,
    "turns": 23,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "6915d46e4bd6ba3994202951badc253ea2714d62",
    "outcome": "win",
    "playerHp": 544,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "229bc75245791c4a5f5f8ad93ba8d501f61e6785",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e67d2dc7e3edd45d016af919cf294e6ed5d30381",
    "outcome": "win",
    "playerHp": 388,
    "playerMp": 501,
    "turns": 55,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "81412424f7d5dabdbec9b4cb646944e7fdef1826",
    "outcome": "win",
    "playerHp": 273,
    "playerMp": 227,
    "turns": 558,
  },
  {
    "enemyHp": 227,
    "label": "heal_vs_들소_boss",
    "logSha": "eca43d782c0eb9b2b331e6450397654ed4970ef9",
    "outcome": "lose",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 251,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "da32dfd937189ea17579a4cfaa20edf87518bd43",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "b6cac6e1f9f83776407d1c644b89067ed3dd53cb",
    "outcome": "win",
    "playerHp": 185,
    "playerMp": 92,
    "turns": 26,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "4971827ae375e8d4e5d57d3cf4819337f385003f",
    "outcome": "p1_win",
    "turns": 73,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "b3ec11399829326c4251e1a32b53d7f130abb159",
    "outcome": "p1_win",
    "turns": 41,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "52e8635b32c8913c22c8f8ac152a9cd30d89f7f7",
    "outcome": "p2_win",
    "turns": 204,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "9e096acad37fd9ac5bb08400058bdb6fd15fe6cb",
    "outcome": "win",
    "playerHp": 712,
    "playerMp": 227,
    "turns": 22,
  },
  {
    "enemyHp": 108,
    "label": "chill_enemy",
    "logSha": "825a977869e7ded44e0ccd89e22794fb5865b494",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 68,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "094ffdf0c3b5c2eca02809e16d11bc7639151e7e",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 140,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "f1e6effba111f187956464119148e0a58094322d",
    "outcome": "win",
    "playerHp": 508,
    "playerMp": 227,
    "turns": 54,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "ab58452af75af77b39efeaadb1bf6d8cf247d5ad",
    "outcome": "win",
    "playerHp": 704,
    "playerMp": 227,
    "turns": 25,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "adb34d898520c955ffb69b5ab18e8da20f95ec07",
    "outcome": "win",
    "playerHp": 704,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 39,
    "label": "heavyblow_enemy",
    "logSha": "2806b02271ee687b1b074429787f598b64defaab",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 585,
  },
]
`;
